--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
         <section id="login">
 
             <div id="imagem">
-                foto
+                foto,
+                
             </div>
 
             <div id="formulario">
                 <h1>Login</h1>
-                <p>seja bem vindo novamente. Faça login para acessar sua conta e poder fazer as configurações do ambiente</p>
+                <p>Seja bem vindo novamente. Faça login para acessar sua conta e realizar as configurações do ambiente</p>
 
                 <form action="login.php" method="post"></form>
 
