--- a/index.html
+++ b/index.html
@@ -7,23 +7,19 @@
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
+
     <main>
         <section id="login">
-
             <div id="imagem">
-                foto,
-                
+                foto
             </div>
-
             <div id="formulario">
-                <h1>Login</h1>
-                <p>Seja bem vindo novamente. Faça login para acessar sua conta e realizar as configurações do ambiente</p>
-
+                <h1>login</h1>
+                <p>Seja bem vindo(a) novamente, faça login para acessasua conta e poder fazer as configurações no seu ambiente</p>
                 <form action="login.php" method="post"></form>
-
             </div>
-
         </section>
     </main>
+    
 </body>
 </html>
