--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 
     <main>
         <section id="login">
-            <div id="imagem">
-                foto
-            </div>
+            <div id="imagem"></div>
             <div id="formulario">
                 <h1>login</h1>
-                <p>Seja bem vindo(a) novamente, faça login para acessasua conta e poder fazer as configurações no seu ambiente</p>
-                <form action="login.php" method="post"></form>
+                <p>Seja bem vindo(a) novamente, faça login para acessar sua conta e realizar as configurações no seu ambiente</p>
+                <form action="login.php" method="post">
+                    <p>Login <input type="text" name="login" id="ilogin"></p>
+                    <p>Senha<input type="password" name="senha" id="isenha"></p>
+                    
+                </form>
             </div>
         </section>
     </main>
