--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Login</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/mediaqueries.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />  
 </head>
 <body>
 
@@ -16,9 +17,18 @@
                 <h1>login</h1>
                 <p>Seja bem vindo(a) novamente, faça login para acessar sua conta e realizar as configurações no seu ambiente</p>
                 <form action="login.php" method="post">
-                    <p>Login <input type="text" name="login" id="ilogin"></p>
-                    <p>Senha<input type="password" name="senha" id="isenha"></p>
-                    
+                    <div class="campo">
+                        <span class="material-symbols-sharp"> person</span>
+                        <input type="email" name="email" id="iemail" autocomplete="email"> 
+                        <label for="iemail">Login</label>
+                    </div>
+                    <div class="campo">
+                        <span class="material-symbols-sharp"> password </span>
+                        <input type="password" name="senha" id="isenha" autocomplete="current-password" minlength="8"  maxlength="30" required>
+                        <label for="isenha">Senha</label>
+                    </div>
+                    <input type="submit" value="Entrar">
+                    <a href="#">Redefinir senha</a>
                 </form>
             </div>
         </section>
