--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <label for="iemail">Login</label>
                     </div>
                     <div class="campo">
-                        <span class="material-symbols-sharp"> password </span>
+                        <span class="material-symbols-sharp">lock</span>
                         <input type="password" name="senha" id="isenha" autocomplete="current-password" minlength="8"  maxlength="30" required>
                         <label for="isenha">Senha</label>
                     </div>
